--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="initial_calories">200</string>
     <string name="app_name">Step Tracker</string>
     <string name="step_count">Steps: %1$d</string>
+    <string name="debug_mode">Debug Mode</string>
 </resources>
